--- a/L1.ipynb
+++ b/L1.ipynb
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "25828c0d",
    "metadata": {},
    "outputs": [
@@ -379,32 +379,33 @@
     }
    ],
    "source": [
-    "#10 VAR\n",
-    "\n",
-    "#!/usr/bin/env python3\n",
-    "# -*- coding: utf-8 -*-\n",
+    "# Библиотеки\n",
     "import math\n",
     "import sys\n",
     "# Постоянная Эйлера.\n",
     "EULER = 0.5772156649015328606\n",
     "\n",
     "# Точность вычислений.\n",
+    "# Если требуемая точность достигнута и очередное слагаемое\n",
+    "# по модулю меньше eps - все последующие слагаемые можно уже не учитывать\n",
     "EPS = 1e-10\n",
     "if __name__ == '__main__':\n",
     "   x = float(input(\"Value of x? \"))\n",
     "   if x == 0:\n",
     "       print(\"Illegal value of x\", file=sys.stderr)\n",
     "       exit(1)\n",
+    "#Добавление новых переменных для случая\n",
+    "#когда x != 0\n",
     "   a = x\n",
     "   S, n = a, 1\n",
     "    \n",
-    "   # Найти сумму членов ряда.\n",
+    "#Найти сумму членов ряда.\n",
     "   while math.fabs(a) > EPS:\n",
     "       a *= (((-1)**n)*x**(2*n+1)) / (2*n+1)*(2*n+1)\n",
     "       S += a\n",
     "       n += 1\n",
     "    \n",
-    "   # Вывести значение функции.\n",
+    "#Вывести значение функции.\n",
     "   print(f\"Ei({x}) = {EULER + math.log(math.fabs(x)) + S}\")"
    ]
   },
@@ -418,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "5b7124e6",
    "metadata": {},
    "outputs": [
@@ -432,32 +433,33 @@
     }
    ],
    "source": [
-    "#10 VAR\n",
-    "\n",
-    "#!/usr/bin/env python3\n",
-    "# -*- coding: utf-8 -*-\n",
+    "# Библиотеки\n",
     "import math\n",
     "import sys\n",
     "# Постоянная Эйлера.\n",
     "EULER = 0.5772156649015328606\n",
     "\n",
     "# Точность вычислений.\n",
+    "# Если требуемая точность достигнута и очередное слагаемое\n",
+    "# по модулю меньше eps - все последующие слагаемые можно уже не учитывать\n",
     "EPS = 1e-10\n",
     "if __name__ == '__main__':\n",
     "   x = float(input(\"Value of x? \"))\n",
     "   if x == 0:\n",
     "       print(\"Illegal value of x\", file=sys.stderr)\n",
     "       exit(1)\n",
+    "#Добавление новых переменных для случая\n",
+    "#когда x != 0\n",
     "   a = x\n",
     "   S, n = a, 1\n",
     "    \n",
-    "   # Найти сумму членов ряда.\n",
+    "#Найти сумму членов ряда.\n",
     "   while math.fabs(a) > EPS:\n",
     "       a *= (((-1)**n)*x**(2*n+1)) / (2*n+1)*(2*n+1)\n",
     "       S += a\n",
     "       n += 1\n",
     "    \n",
-    "   # Вывести значение функции.\n",
+    "#Вывести значение функции.\n",
     "   print(f\"Ei({x}) = {EULER + math.log(math.fabs(x)) + S}\")"
    ]
   },
@@ -497,33 +499,34 @@
     }
    ],
    "source": [
-    "#10 VAR\n",
-    "\n",
-    "#!/usr/bin/env python3\n",
-    "# -*- coding: utf-8 -*-\n",
+    "# Библиотеки\n",
     "import math\n",
     "import sys\n",
     "# Постоянная Эйлера.\n",
     "EULER = 0.5772156649015328606\n",
     "\n",
     "# Точность вычислений.\n",
+    "# Если требуемая точность достигнута и очередное слагаемое\n",
+    "# по модулю меньше eps - все последующие слагаемые можно уже не учитывать\n",
     "EPS = 1e-10\n",
     "if __name__ == '__main__':\n",
     "   x = float(input(\"Value of x? \"))\n",
     "   if x == 0:\n",
     "       print(\"Illegal value of x\", file=sys.stderr)\n",
     "       exit(1)\n",
+    "#Добавление новых переменных для случая\n",
+    "#когда x != 0\n",
     "   a = x\n",
     "   S, n = a, 1\n",
     "    \n",
-    "   # Найти сумму членов ряда.\n",
+    "#Найти сумму членов ряда.\n",
     "   while math.fabs(a) > EPS:\n",
     "       a *= (((-1)**n)*x**(2*n+1)) / (2*n+1)*(2*n+1)\n",
     "       S += a\n",
     "       n += 1\n",
     "    \n",
-    "   # Вывести значение функции.\n",
-    "   print(f\"Ei({x}) = {EULER + math.log(math.fabs(x)) + S}\")\n"
+    "#Вывести значение функции.\n",
+    "   print(f\"Ei({x}) = {EULER + math.log(math.fabs(x)) + S}\")"
    ]
   },
   {
