--- a/L1.ipynb
+++ b/L1.ipynb
@@ -354,6 +354,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b969414f",
+   "metadata": {},
+   "source": [
+    "an+1 = (((-1)^n+1)*(x^2(n+1)+1)) / (2(n+1)+1)math.factorial(2(n+1)+1) =\n",
+    "= ((-1)^n*(-1)*x^2n+1)*x^2 / (2n+2+1)math.factorial(2n+2+1)\n",
+    "an+1 = (((-1)^n*x^2n+1)/(2n+1)math.factorial(2n+1)) * (-x^2/(2n+3)(2n+2)(2n+3)) * (2n+1)/(2n+1) = \n",
+    "(((-1)^n*x^2n+1)/math.factorial(2n+1)(2n+1)) * (-x^2(2n+1))/(2n+2)(2n+3)^2)\n",
+    "an+1 = an*((-x^2(2n+1))/((2n+2)(2n+3)^2)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0ed0403f",
    "metadata": {},
    "source": [
