--- a/ЛР12/L12.ipynb
+++ b/ЛР12/L12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "423b143a",
+   "id": "bc4a98ce",
    "metadata": {},
    "source": [
     "# Лабораторная работа 3.6 Построение 3D графиков. Работа с mplot3d Toolkit\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25b9a459",
+   "id": "219b2fd0",
    "metadata": {},
    "source": [
     "***"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af5e1002",
+   "id": "e1fd4372",
    "metadata": {},
    "source": [
     "# Задание 1"
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7f9c5b90",
+   "id": "cc11615f",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0de3da60",
+   "id": "d6cdfe4a",
    "metadata": {},
    "source": [
     "# Задание 2"
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "722da424",
+   "id": "4ceb5a9b",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a26f6c4d",
+   "id": "a73db27f",
    "metadata": {},
    "source": [
     "# Задание 3"
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e147559a",
+   "id": "b30162cb",
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ef90c1c",
+   "id": "c0f05245",
    "metadata": {},
    "source": [
     "***"
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84026497",
+   "id": "2fa38c66",
    "metadata": {},
    "source": [
     "## Ответы на вопросы"
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d41fb68",
+   "id": "9f785197",
    "metadata": {},
    "source": [
     "1. Как выполнить построение линейного 3D-графика с помощью matplotlib?\n",
@@ -226,7 +226,7 @@
     "передан скаляр, то он будет присвоен всем точкам графика.\n",
     " zdir: {‘x’, ‘y’, ‘z’} - определяет ось, которая будет принята за z\n",
     "направление, значение по умолчанию: ‘z’.\n",
-    " **kwargs - дополнительные аргументы, аналогичные тем, что\n",
+    " kwargs - дополнительные аргументы, аналогичные тем, что\n",
     "используются в функции plot() для построения двумерных графиков.\n",
     "\n",
     "2. Как выполнить построение точечного 3D-графика с помощью matplotlib?\n",
@@ -249,14 +249,14 @@
     "o 2D массив, элементами которого являются RGB или RGBA.\n",
     " depthshade: bool, optional - затенение маркеров для придания\n",
     "эффекта глубины.\n",
-    " **kwargs - дополнительные аргументы, аналогичные тем, что\n",
+    " kwargs - дополнительные аргументы, аналогичные тем, что\n",
     "используются в функции scatter() для построения двумерных графиков.\n",
     "\n",
     "3. Как выполнить построение каркасной поверхности с помощью matplotlib?\n",
     "\n",
     "Для построения каркасной поверхности используется функция\n",
     "plot_wireframe().\n",
-    "plot_wireframe(self, X, Y, Z, *args, **kwargs)\n",
+    "plot_wireframe(self, X, Y, Z, *args, kwargs)\n",
     " X, Y, Z: 2D-массивы - данные для построения поверхности.\n",
     " rcount, ccount: int - максимальное количество элементов каркаса,\n",
     "которое будет использовано в каждом из направлений. Значение по\n",
@@ -264,14 +264,14 @@
     " rstride, cstride: int - параметры определяют величину шага, с\n",
     "которым будут браться элементы строки / столбца из переданных массивов.\n",
     "Параметры rstride, cstride и rcount, ccount являются взаимоисключающими.\n",
-    " **kwargs - дополнительные аргументы, определяемые\n",
+    " kwargs - дополнительные аргументы, определяемые\n",
     "Line3DCollection\n",
     "\n",
     "4. Как выполнить построение трехмерной поверхности с помощью matplotlib?\n",
     "\n",
     "Для построения поверхности используйте функцию plot_surface().\n",
     "plot_surface(self, X, Y, Z, *args, norm=None, vmin=None, vmax=None,\n",
-    "lightsource=None, **kwargs)\n",
+    "lightsource=None, kwargs)\n",
     " X, Y, Z : 2D-массивы - данные для построения поверхности.\n",
     " rcount, ccount : int - см. rcount, ccount в “Каркасная поверхность\n",
     " rstride, cstride : int - см.rstride, cstride в “Каркасная поверхность\n",
@@ -285,14 +285,14 @@
     "умолчанию: True.\n",
     " lightsource: LightSource объект класса LightSource – определяет\n",
     "источник света, используется, только если shade = True.\n",
-    " **kwargs дополнительные аргументы, определяемые\n",
+    " kwargs дополнительные аргументы, определяемые\n",
     "Poly3DCollection"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "826017c3",
+   "id": "886fa7ec",
    "metadata": {},
    "outputs": [],
    "source": []
